--- a/modules/apps/amazon-rankings/amazon-rankings-web/ivy.xml
+++ b/modules/apps/amazon-rankings/amazon-rankings-web/ivy.xml
@@ -17,6 +17,7 @@
 	</publications>
 
 	<dependencies defaultconf="default">
+		<dependency name="biz.aQute.bnd" org="biz.aQute.bnd" rev="3.0.0" />
 		<dependency name="org.osgi.compendium" org="org.osgi" rev="5.0.0" />
 	</dependencies>
 </ivy-module>
